--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <div class="col-lg-6 col-md-12">
                             <div class="card-body">
                                 <div class="h4 mt-0 title">About</div>
-                                <p>Hello! I am Nguyen Nghia Hoang. Web Developer</p>
+                                <p>Hello! I am Nguyen Nghia Hoang.</p>
                                 <p>I am a graduate student of FPT University. My main major is Software Engineering.</p>
 
                                 <p> In mid-2017, I participated in the scholarship exam of FPT University and was
