--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                          style="background-image: url('images/TaXua2021.jpeg')"></div>
                     <div class="container">
                         <div class="content-center">
-                            <div class="cc-profile-image"><a href="https://fb.com/hoangnn.4310"><img src="images/FE1.jpg" alt="Image"/></a>
+                            <div class="cc-profile-image"><a href="https://fb.com/hoangnn.4310"><img src="images/Avatar.jpg" alt="Image"/></a>
                             </div>
                             <div class="h2 title">Nguyen Nghia Hoang</div>
                             <p class="category text-white">Software Developer</p>
