--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                             </div>
                             <div class="h2 title">Nguyen Nghia Hoang</div>
                             <p class="category text-white">Software Developer</p>
+                            <a class="btn btn-primary aos-init aos-animate" data-aos="zoom-in" data-aos-anchor="data-aos-anchor" href="js/CV%20-%20Nguyen%20Nghia%20Hoang%20-%20Fresher%20Software%20Developer.pdf" download>Download CV</a>
                         </div>
                     </div>
                     <div class="section">
