--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                                 <div class="col-md-6">
                                     <div class="cc-porfolio-image img-raised" data-aos="fade-up"
                                          data-aos-anchor-placement="top-bottom"><a href="#">
-                                        <figure class="cc-effect"><img src="https://scontent.fhan4-1.fna.fbcdn.net/v/t1.6435-9/141704438_2931715643818621_8912270313598848213_n.jpg?_nc_cat=105&ccb=1-5&_nc_sid=0debeb&_nc_ohc=G-GldryYOz0AX_Tqfd6&_nc_ht=scontent.fhan4-1.fna&oh=9a41ab7fc0e1b1d99da663dabc5baaa0&oe=6177942E" alt="Image"/>
+                                        <figure class="cc-effect"><img src="images/Ta-Xua.jpg" alt="Image"/>
                                             <figcaption>
                                                 <div class="h4">Ta Xua - Bac Yen</div>
 
@@ -351,7 +351,7 @@
 
                                     <div class="cc-porfolio-image img-raised" data-aos="fade-up"
                                          data-aos-anchor-placement="top-bottom"><a href="#">
-                                        <figure class="cc-effect"><img src="https://lh3.googleusercontent.com/pw/AM-JKLUVoxq8CTkMJ3swqC-PJVF-umBQxoi_XCQASRqJ108g2eFhVR7BDjvL0155IyqHP5uBndphRysMxRKzLe5iAvIqPKkgRS5wssWqrJ5BwprENG83QSynZ46wc0I6Z_sC28sjgLJBuZqCuas2NPpNa0Xg=s663-no?authuser=0" alt="Image"/>
+                                        <figure class="cc-effect"><img src="images/Ho_Tay.jpg" alt="Image"/>
                                             <figcaption>
                                                 <div class="h4">Sunset at West Lake - Hanoi</div>
                                                 <p></p>
@@ -362,7 +362,7 @@
                                 <div class="col-md-6">
                                     <div class="cc-porfolio-image img-raised" data-aos="fade-up"
                                          data-aos-anchor-placement="top-bottom"><a href="#">
-                                        <figure class="cc-effect"><img src="https://scontent.fhan3-3.fna.fbcdn.net/v/t1.6435-9/68555337_1094523927412024_2090843783963869184_n.jpg?_nc_cat=108&ccb=1-5&_nc_sid=8bfeb9&_nc_ohc=G7UwIkw6cFsAX9PtCHk&_nc_ht=scontent.fhan3-3.fna&oh=79543c8dcbbe383ef8b259336f766dad&oe=61740FF8" alt="Image"/>
+                                        <figure class="cc-effect"><img src="images/Ho_Tay.jpg" alt="Image"/>
                                             <figcaption>
                                                 <div class="h4">Que Tay Giang Peak -  Quang Nam</div>
                                             </figcaption>
@@ -370,7 +370,7 @@
                                     </a></div>
                                     <div class="cc-porfolio-image img-raised" data-aos="fade-up"
                                          data-aos-anchor-placement="top-bottom"><a href="#">
-                                        <figure class="cc-effect"><img src="https://scontent.fhan3-5.fna.fbcdn.net/v/t1.6435-9/31699036_2312123092347946_6267093407898796032_n.jpg?_nc_cat=109&ccb=1-5&_nc_sid=174925&_nc_ohc=5Bi0_yegLvMAX8i5GPB&_nc_ht=scontent.fhan3-5.fna&oh=bb54bb30e1dd9d22599d6c68e70c1835&oe=6174E286" alt="Image"/>
+                                        <figure class="cc-effect"><img src="images/Deo_Hai_Van.jpg" alt="Image"/>
                                             <figcaption>
                                                 <div class="h4">Hai Van Pass - Da Nang</div>
                                             </figcaption>
