--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
                                 <div class="col-md-6">
                                     <div class="cc-porfolio-image img-raised" data-aos="fade-up"
                                          data-aos-anchor-placement="top-bottom"><a href="#">
-                                        <figure class="cc-effect"><img src="images/Ho_Tay.jpg" alt="Image"/>
+                                        <figure class="cc-effect"><img src="images/Dinh_Que.jpg" alt="Image"/>
                                             <figcaption>
                                                 <div class="h4">Que Tay Giang Peak -  Quang Nam</div>
                                             </figcaption>
