--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                         </div>
                         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                             <div class="card-body">
-                                <div class="h5">INTERNS</div>
+                                <div class="h5">INTERN</div>
                                 <p>Use: Python, PostgreSQL, Java Spring Boot, Oracle SQL</p>
                                 <p>Upgrading, improving, and fixing bugs related to the software to manage working time,
                                     calculating salary and leave of employees in the company (Phase 1).</p>
@@ -300,7 +300,7 @@
                         </div>
                         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                             <div class="card-body">
-                                <div class="h5">INTERNS</div>
+                                <div class="h5">INTERN</div>
                                 <p>Use: C#, AngularJS</p>
                                 <p>Fix bugs related to the company's management software when assigned.
                                 </p>
