--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                             <div class="card-body">
                                 <div class="h5">COLLABORATOR</div>
-                                <p>Use: Java Spring Boot, Oracle SQL, C#</p>
+                                <p>Use: Java Spring Boot, MySQL, C#</p>
                                 <p>Upgrading, improving, and fixing bugs related to the software to manage working time,
                                     calculating salary and leave of employees in the company (Phase 2).</p>
                             </div>
@@ -282,7 +282,7 @@
                         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                             <div class="card-body">
                                 <div class="h5">INTERN</div>
-                                <p>Use: Python, PostgreSQL, Java Spring Boot, Oracle SQL</p>
+                                <p>Use: Python, PostgreSQL, Java Spring Boot, MySQL</p>
                                 <p>Upgrading, improving, and fixing bugs related to the software to manage working time,
                                     calculating salary and leave of employees in the company (Phase 1).</p>
                             </div>
