--- a/index.html
+++ b/index.html
@@ -170,25 +170,25 @@
                             <div class="col-md-6">
                                 <div class="progress-container progress-primary"><span
                                         class="progress-badge">Java (Spring Boot)</span>
-                                    <div class="progress">
+<!--                                     <div class="progress">
                                         <div class="progress-bar progress-bar-primary" data-aos="progress-full"
                                              data-aos-offset="10" data-aos-duration="2000" role="progressbar"
                                              aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
                                              style="width: 75%;"></div>
                                         <span class="progress-value">75%</span>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="progress-container progress-primary"><span
                                         class="progress-badge">SQL (SQL Server, MySQL, PostgreSQL)</span>
-                                    <div class="progress">
+<!--                                     <div class="progress">
                                         <div class="progress-bar progress-bar-primary" data-aos="progress-full"
                                              data-aos-offset="10" data-aos-duration="2000" role="progressbar"
                                              aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
                                              style="width: 90%;"></div>
                                         <span class="progress-value">90%</span>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
 
@@ -197,25 +197,25 @@
                             <div class="col-md-6">
                                 <div class="progress-container progress-primary"><span
                                         class="progress-badge">C#</span>
-                                    <div class="progress">
+<!--                                     <div class="progress">
                                         <div class="progress-bar progress-bar-primary" data-aos="progress-full"
                                              data-aos-offset="10" data-aos-duration="2000" role="progressbar"
                                              aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
                                              style="width: 50%;"></div>
                                         <span class="progress-value">50%</span>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="progress-container progress-primary"><span
                                         class="progress-badge">HTML, CSS</span>
-                                    <div class="progress">
+<!--                                     <div class="progress">
                                         <div class="progress-bar progress-bar-primary" data-aos="progress-full"
                                              data-aos-offset="10" data-aos-duration="2000" role="progressbar"
                                              aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
                                              style="width: 45%;"></div>
                                         <span class="progress-value">45%</span>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
@@ -223,24 +223,24 @@
                             <div class="col-md-6">
                                 <div class="progress-container progress-primary"><span
                                         class="progress-badge">Python</span>
-                                    <div class="progress">
+<!--                                     <div class="progress">
                                         <div class="progress-bar progress-bar-primary" data-aos="progress-full"
                                              data-aos-offset="10" data-aos-duration="2000" role="progressbar"
                                              aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
                                              style="width: 20%;"></div>
                                         <span class="progress-value">20%</span>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="progress-container progress-primary"><span class="progress-badge">Tortoise SVN, Git</span>
-                                    <div class="progress">
+<!--                                     <div class="progress">
                                         <div class="progress-bar progress-bar-primary" data-aos="progress-full"
                                              data-aos-offset="10" data-aos-duration="2000" role="progressbar"
                                              aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
                                              style="width: 70%;"></div>
                                         <span class="progress-value">70%</span>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
